src/objects/Transaction__c.object
<CustomObject>
    <description>Anytime Money is paid towards a Unit, it can be logged here.</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount__c</fullName>
        <label>Dollar Amount</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payee</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Unit_Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Unit_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>Where the money is coming from.</description>
        <label>Resource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Security Deposit</fullName>
                </value>
                <value>
                    <fullName>Landlord Incentive Payment</fullName>
                </value>
                <value>
                    <fullName>Application Fee</fullName>
                </value>
                <value>
                    <fullName>Utility Assistance</fullName>
                </value>
                <value>
                    <fullName>Rental Assistance</fullName>
                </value>
                <value>
                    <fullName>Landlord Contingency Fund - Damages</fullName>
                </value>
                <value>
                    <fullName>Landlord Contingency Fund - Eviction</fullName>
                </value>
                <value>
                    <fullName>Landlord Contingency Fund - Holding Fee</fullName>
                </value>
                <value>
                    <fullName>Landlord Contingency Fund - Missed Rent</fullName>
                </value>
                <value>
                    <fullName>Landlord Contingency Fund - Other</fullName>
                </value>
                <value>
                    <fullName>Employment Readiness</fullName>
                </value>
                <value>
                    <fullName>Vehicle Expenses</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo - Furniture</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Wells Fargo - Hotel</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Wells Fargo – Job Training</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidy_Program_Type__c</fullName>
        <label>Subsidy/Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1,000 Vets RRH</fullName>
                </value>
                <value>
                    <fullName>1,000 Vets SBS</fullName>
                </value>
                <value>
                    <fullName>VASH</fullName>
                </value>
                <value>
                    <fullName>RRH/SSVF</fullName>
                </value>
                <value>
                    <fullName>Moving Home/RRH</fullName>
                </value>
                <value>
                    <fullName>SBS</fullName>
                </value>
                <value>
                    <fullName>Prevention</fullName>
                </value>
                <value>
                    <fullName>Diversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_Unit_Placement_Agreement_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant/Unit Placement Agreement ID</label>
        <referenceTo>Unit_Placement__c</referenceTo>
        <relationshipName>Unit_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Owner__c</fullName>
        <formula>Tenant_Unit_Placement_Agreement_ID__r.Assigned_Unit__r.Property_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Tenant__c</fullName>
        <formula>Tenant_Unit_Placement_Agreement_ID__r.Tenant__r.FirstName + &apos; &apos; +  Tenant_Unit_Placement_Agreement_ID__r.Tenant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Tenant</label>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dollar_Amount__c</columns>
        <columns>Resource__c</columns>
        <columns>Subsidy_Program_Type__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>